# perzona

./: README.md
backend/: .gitignore  README.md  pyproject.toml
backend/photo-to-video/: ptv.py  pyproject.toml
backend/save-file-to-s3/: file_to_s3.py  pyproject.toml
backend/text-to-speech/: pyproject.toml  tts.py
frontend/: package-lock.json  package.json
frontend/prisma/: schema.prisma
frontend/src/: env.js
frontend/src/actions/: creations.ts  generations.ts
frontend/src/app/: layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/account/[accountView]/: page.tsx
frontend/src/app/(auth)/auth/[authView]/: page.tsx
frontend/src/app/(main)/: layout.tsx  page.tsx
frontend/src/app/api/fal/: route.ts
frontend/src/app/api/inngest/: route.ts
frontend/src/components/: audio-dropzone.tsx  audio-upload-modal.tsx  audio-uploader-and-recorder.tsx  choose-voice-modal.tsx  client-home.tsx  providers.tsx  video-dropzone.tsx
frontend/src/components/account/: back-button.tsx
frontend/src/components/modals/: change-video-audio-modal.tsx  photo-to-video-modal.tsx  video-translation-modal.tsx
frontend/src/components/sidebar/: app-sidebar.tsx  breadcrumb-client.tsx  sidebar-menu-items.tsx
frontend/src/components/ui/: sidebar.tsx
frontend/src/hooks/: useAudioPlayer.ts
frontend/src/inngest/: client.ts  functions.ts
frontend/src/lib/: auth-client.ts  auth.ts  s3.ts
frontend/src/styles/: globals.css
frontend/src/utils/: cropImage.ts  media.ts
