[project]
name = "text-to-speech"
version = "0.1.0"
description = "Text to speech generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21.0",
    "chatterbox-tts>=0.1.4",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "modal>=0.62.0",
    "pydantic>=2.0.0",
    "ml-dtypes>=0.2.0,<0.3.0",
    "onnx>=1.14.0,<1.15.0",
    "pkuseg==0.0.25",
]

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]

